--- a/Apple/iOS/appDinkplay.entitlements
+++ b/Apple/iOS/appDinkplay.entitlements
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>application-identifier</key>
-	<string>9W37AU7273.com.adinkra.appDinkplay</string>
+	<string>XXXXXXXXXX.com.adinkra.appDinkplay</string>
 	<key>com.apple.developer.team-identifier</key>
-	<string>9W37AU7273</string>
+	<string>XXXXXXXXXX</string>
         <!--<key>com.apple.security.files.bookmarks.app-scope</key>
 	<true/>
 	<key>com.apple.security.files.bookmarks.document-scope</key>
